@@ -1,5 +1,6 @@
 2015-07-07  James Anderson  <anderson@gfz-potsdam.de>
 
+	* utils/compareDiFXims.c:
 	* src/difxcalc.c: bugfixes
 
 2015-06-24  James Anderson  <anderson@gfz-potsdam.de>
